Add Eclipse run project instructions